# verification-template

./: .gitignore  Everything.agda  Makefile  README.md  cabal.project  project.agda-lib  project.cabal
demo/: Main.hs
lib/Data/: CoList.hs  Delay.hs  InfiniteList.hs  Nat.hs  SimpleList.hs  Thunk.hs  Tree.hs
src/: Project.agda
src/Data/: CoList.agda  Delay.agda  InfiniteList.agda  Nat.agda  SimpleList.agda  Thunk.agda  Tree.agda
src/Data/InfiniteList/: Bissimilarity.agda  Properties.Agda
src/Data/Tree/: Properties.agda
