name:          project
version:       0.0.0
cabal-version: >= 1.10
build-type:    Simple

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  build-depends:    base >= 4.11 && < 5
  exposed-modules:  Data.Tree

executable demo
  hs-source-dirs:   demo
  main-is:          Main.hs
  build-depends:    base >= 4.11 && < 5
                  , project
